fix: fix project title & scrollbar both-edge (#4)

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -55,6 +55,10 @@
   margin-bottom: 0.5rem;
 }
 
+:root{
+  scroll-behavior: smooth;
+  scrollbar-gutter: stable both-edge;
+}
 
 *::-webkit-scrollbar{
   width: 8px;
@@ -62,14 +66,17 @@
   background-color: transparent;
 }
 
-*::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 4px;
+*::-webkit-scrollbar-track{
+  background-color: transparent;
 }
 
-*{
+*::-webkit-scrollbar-thumb {
+  background: gray; 
+  border-radius: 4px; 
+}
+
+* {
   scrollbar-width: auto;
   scrollbar-color: auto;
   scrollbar-gutter: auto;
-  scroll-behavior: smooth;
 }
